k8s/deltaguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scanrook-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 20g
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: scanrook.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scanrook-web
                port:
                  number: 3000
    - host: scanrook.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scanrook-web
                port:
                  number: 3000
    - host: deltaguard.apps.onetripp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scanrook-web
                port:
                  number: 3000
